--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,6 +69,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Cart" asp-action="Index">Giỏ hàng</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-action="Index" asp-controller="Bill">Lịch sử hóa đơn</a>
+                        </li>
                     </ul>
 
                     <ul class="navbar-nav">
