--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -39,7 +39,7 @@
 
         <div class="text-end mt-3">
             <a asp-action="Clear" class="btn btn-outline-danger">Xóa tất cả</a>
-            <a href="/Payment/Create" class="btn btn-success ms-2 px-4 py-2">
+            <a asp-action="Create" asp-controller="Payment" class="btn btn-success ms-2 px-4 py-2">
                 <i class="bi bi-credit-card"></i> Thanh toán qua PayOS
             </a>
         </div>
