--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
                                 <a class="btn btn-outline-primary me-2" asp-controller="Account" asp-action="Login">Đăng nhập</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" asp-controller="Account" asp-action="Register">Đăng ký</a>
+                                <a class="btn btn-primary" asp-controller="Operation" asp-action="Create">Đăng ký</a>
                             </li>
                         }
                     </ul>
