--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -40,7 +40,7 @@
         <div class="text-end mt-3">
             <a asp-action="Clear" class="btn btn-outline-danger">Xóa tất cả</a>
             <a asp-action="Create" asp-controller="Payment" class="btn btn-success ms-2 px-4 py-2">
-                <i class="bi bi-credit-card"></i> Thanh toán qua PayOS
+                <i class="bi bi-credit-card"></i> Quét mã QR
             </a>
         </div>
     }
